--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
 	<uses-sdk android:minSdkVersion="11" />
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@style/Theme.AppCompat.Light">
-        <activity android:name="HomeActivity"
-                  android:label="@string/app_name">
+        <activity android:name=".controller.HomeActivity"
+                  android:label="@string/app_name"
+				  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
