Initial creation of Grocery List Modify activity and switch fragment activity

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -17,5 +17,6 @@
             </intent-filter>
         </activity>
 		<activity android:name=".controller.GroceryListActivity" />
+		<activity android:name=".controller.GroceryListModifyActivity" />
     </application>
 </manifest>
