--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 	  >
 
 	<uses-sdk android:minSdkVersion="11" android:targetSdkVersion="21"/>
+	<uses-permission android:name="android.permission.INTERNET" />
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@style/Theme.AppCompat.Light">
         <activity android:name=".controller.HomeActivity"
