--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -22,11 +22,7 @@
                 android:value=".controller.ProductSearchActivity"
                 />
         </activity>
-        <activity android:name=".controller.PriceContributorActivity">
-            <meta-data android:name="android.app.default_searchable"
-                android:value=".controller.ProductSearchActivity"
-                />
-        </activity>
+        <activity android:name=".controller.PriceContributorActivity" />
         <activity
             android:name=".controller.ProductSearchActivity"
             android:launchMode="singleTop"
