--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,19 @@
-buildscript
-{
-	repositories
-	{
-		jcenter()
-	}
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-	dependencies
-	{
-		classpath 'com.android.tools.build:gradle:1.0.0'
-	}
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.1.0'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
 }
 
-apply plugin: 'com.android.application'
-apply plugin: 'android'
-
-android 
-{
-	buildToolsVersion "21.1.2"
-	compileSdkVersion 21
-
-	defaultConfig
-	{
-		minSdkVersion 11
-		targetSdkVersion 21
-		versionCode 1
-		versionName "1.0"
-	}
+allprojects {
+    repositories {
+        jcenter()
+    }
 }
-
-dependencies
-{
-	compile "com.android.support:support-v4:21.0.0"
-	compile "com.android.support:appcompat-v7:18.0.+"
-}
-
-
