--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="21"/>
 	<uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@style/Theme.AppCompat.Light">
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@style/WTS_ActionBar">
         <activity android:name=".controller.HomeActivity"
                   android:label="@string/app_name"
 				  >
