Made price contributor available from home activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,14 @@
                 />
         </activity>
         <activity
+            android:name=".controller.PriceContributorActivity"
+            >
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".controller.ProductSearchActivity"
+                />
+        </activity>
+        <activity
             android:name=".controller.ProductSearchActivity"
             >
             <intent-filter>
